--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -1,6 +1,151 @@
-<%- include("header") -%>
-<h1><%=problem.id%></h1>
-<h1><%=problem.name%></h1>
-<h1><%=problem.topic%></h1>
-<h1><%=problem.description%></h1>
-<h1><%=problem.points%></h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="https://kit.fontawesome.com/52e276fb65.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="stylesheet" href="style.css">
+    
+    <style>
+        .pestana{
+            width: 32.5%;
+            padding: 3px 0 3px 0;
+            border: 3px solid bisque;
+            background-color: white;
+        }
+        .outline:focus{
+            outline: none;
+        }
+        .active{
+            font-weight: bold;
+            color: white;
+        }
+        .active[id="redaccion"]{
+            background: #01DF01;
+        }
+        .active[id="pistas"]{
+            background: #FFBF00;
+        }
+        .active[id="solucion"]{
+            background: #848484;
+        }
+        .contenido{
+            border-radius: 5px;
+            border-top-left-radius: 0px;
+            border: 2px solid bisque;
+        }
+
+    </style>
+</head>
+<body class="bg-blue-100">
+
+    <a href="/home">
+        <i class="fas fa-arrow-left text-4xl mt-5 ml-5 mb-3"></i>
+    </a>
+
+    <div class="flex justify-between mt-3 mb-8">
+
+        <section class="w-2/5 mx-4 ">
+
+            <aside class="rounded-lg shadow-lg">
+                <div id="pestanas" class="w-full flex justify-between">
+                    <button id="redaccion" class="text-center rounded-t-lg outline pestana active">Redacción <i class="fas fa-search"></i> </button>
+                    <button id="pistas" class="text-center rounded-t-lg outline pestana">Pistas <i class="fab fa-readme"></i></button>
+                    <button id="solucion" class="text-center rounded-t-lg outline pestana">Solución <i class="fas fa-poll-h"></i></button>
+                </div>
+    
+                <div id="contenido-redaccion" class="contenido bg-white px-2 py-4">
+                    <h1><%=problem.id%></h1>
+                    <h1><%=problem.name%></h1>
+                    <h1><%=problem.topic%></h1>
+                    <h1><%=problem.description%></h1>
+                    <h1><%=problem.points%></h1>
+                </div>
+
+                <div id="contenido-pistas" class="hidden contenido bg-white px-2 py-4">
+                    <h1> mis pistas </h1>    
+                </div>
+
+                <div id="contenido-solucion" class="hidden contenido bg-white px-2 py-4">
+                    <h1> mi solucion</h1>
+                </div>
+
+            </aside>
+        </section>
+    
+        <section id="problem" class="w-3/5 mr-4 py-3 bg-white rounded-lg shadow-lg">
+            
+            <h1 class="ml-5 mt-3 mb-5 font-semibold">RESPUESTA</h1>
+
+            <div id="wrong_banner" class="w-2/4 mx-auto relative text-center rounded-lg py-2 mb-5 banner border-solid border-4 border-gray-600">
+                <h1 class="text-center text-2xl">Upss, ¡Intenta de nuevo!</h1>
+                <i class="fas fa-frown-open text-3xl"></i>
+                <div class="flex flex-col mt-2" >
+                    <button class="w-2/4 bg-red-500 hover:bg-red-400 text-white font-bold py-2 px-4 mx-auto mb-2 border-b-4 border-red-700 hover:border-red-500 rounded outline cerrar">
+                        Cerrar
+                    </button>
+
+                    <button id="btn_try" class="w-2/4 bg-green-500 hover:bg-green-400 text-white font-bold py-2 px-4 mx-auto mb-2 border-b-4 border-green-700 hover:border-green-500 rounded outline">
+                        Intentar de nuevo
+                    </button>
+                </div>  
+            </div>
+
+            <div id="correct_banner" class="w-11/12 mx-auto relative text-center rounded-lg py-2 mb-5 banner border-solid border-4 border-gray-600">
+                <h1 class="text-center text-2xl">¡Felicidades!</h1>
+                <i class="fas fa-laugh-beam text-3xl"></i>  
+                <div class="flex flex-col mt-2" >
+                    <button class="w-2/4 bg-red-500 hover:bg-red-400 text-white font-bold py-2 px-4 mx-auto mb-2 border-b-4 border-red-700 hover:border-red-500 rounded outline cerrar">
+                        Cerrar
+                    </button>
+
+                    <a href="">
+                        <button class="w-2/4 bg-green-500 hover:bg-green-400 text-white font-bold py-2 px-4 mx-auto mb-2 border-b-4 border-green-700 hover:border-green-500 rounded outline">
+                            Ir a la lista de problemas
+                        </button>
+                    </a>
+                    
+                </div>
+            </div>
+
+            <div class="flex justify-center mb-5">
+                <input placeholder="Tu respuesta" type="number" name="respuesta" id="respuesta" class="bg-gray-200 w-10/12 h-16 rounded-lg mx-auto py-3 px-3 shadow-inner outline"/>
+            </div>
+
+            <div class="flex justify-center mb-3">
+                <button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded outline" type="submit">
+                    Calificar
+                </button>
+            </div>
+            
+            
+        </section>
+
+        
+
+    </div>
+</body>
+
+<script>
+
+    $('.pestana').on('click', function(){
+        $('.pestana').removeClass('active');
+        $(this).addClass('active');
+        const contentId = `#contenido-${$(this).attr('id')}`;
+        $('.contenido').addClass('hidden');
+        $(contentId).removeClass('hidden');
+    });
+
+    $('.cerrar').on('click', function(){
+        $('.banner').addClass('hidden');
+    });
+
+    $('#btn_try').on('click', function(){
+        $('#respuesta').val('');
+        $('.banner').addClass('hidden');
+    })
+    
+</script>
+</html>
