--- a/components/navbar.ejs
+++ b/components/navbar.ejs
@@ -3,9 +3,8 @@
         <div class="flex justify-between h-16">
             <div class="flex">
                 <div class="flex-shrink-0 flex items-center">
-                    <img class="block lg:hidden h-8 w-auto" src="img/small_logo.png" alt="Mate al alcance logo">
-                    <img class="hidden lg:block h-8 w-auto"
-                        src="https://tailwindui.com/img/logos/workflow-logo-on-white.svg" alt="Mate al alcance logo">
+                    <img class="block lg:hidden h-12 w-auto" src="img/small_logo.png" alt="Mate al alcance logo">
+                    <img class="hidden lg:block h-20 w-auto" src="img/name.png" alt="Mate al alcance logo">
                 </div>
                 <div class="hidden sm:ml-6 sm:flex">
                     <a href="/home"
